deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intent-engine
  namespace: ie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: intent-engine
  template:
    metadata:
      labels:
        app: intent-engine
    spec:
      containers:
      - name: intent-engine
        image: localhost:32000/intent-engine:latest
        ports:
        - containerPort: 3000
          # containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: intent-service
  namespace: ie
spec:
  selector:
    app: intent-engine
  ports:
    - name: rabbitmq
      protocol: TCP
      port: 51276
      targetPort: 51276
    - name: rabbitmq2
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: rabbitmq3
      protocol: TCP
      port: 44914
      targetPort: 44914
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
